day05-ingress/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress-host
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    external-dns.alpha.kubernetes.io/hostname: example.com
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
      - path: /httpd
        pathType: Prefix
        backend:
          service:
            name: httpd
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd
            port:
              number: 80
